# muesli

./: .dockerignore  .editorconfig  .env.example  .gitignore  .prettierignore  AGENTS.md  CLA.md  Cargo.toml  Dockerfile  Google-Docs-for-Markdown-Files.md  README.md  SECURITY-REVIEW.md  docker-compose.prod.yml  docker-compose.yml  eslint.config.mjs  install.sh  package.json  pnpm-lock.yaml
.githooks/: pre-push
.github/workflows/: ci.yml  cla.yml  cli-release.yml  desktop-macos.yml  desktop-release.yml  docker.yml
apps/desktop/: .gitignore  README.md  package.json  pnpm-lock.yaml  vite.config.js
apps/desktop/docs/superpowers/plans/: 2026-06-23-demo-muesli-mvp.md  2026-06-23-obsidian-editor.md  (+9 more)
apps/desktop/src/: app.css
apps/desktop/src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: appearance.rs  collab.rs  commands.rs  lib.rs  main.rs  sync_cmd.rs  workspaces_cmd.rs
apps/desktop/src-tauri/src/audio/: mic.rs  mod.rs  normalize.rs  resample.rs  system.rs  vad.rs
apps/desktop/src-tauri/src/auth/: mod.rs
apps/desktop/src-tauri/src/clone/: mod.rs  paths.rs
apps/desktop/src-tauri/src/editor_bridge/: mod.rs
apps/desktop/src-tauri/src/output/: markdown.rs
apps/desktop/src-tauri/src/stt/: engine.rs  fluidaudio.rs  mod.rs  model.rs  parakeet.rs  worker.rs
apps/desktop/src-tauri/src/sync_daemon/: mod.rs
apps/desktop/src-tauri/src/workspace/: graph.rs  mod.rs  recent.rs  search.rs  tree.rs
apps/desktop/src-tauri/src/workspace_index/: mod.rs
apps/desktop/src/lib/: AppShell.svelte  CommandPalette.svelte  ContextMenu.svelte  CreateWorkspaceModal.svelte  EditorPane.svelte  FileInfoPopover.svelte  FileTree.svelte  GraphView.svelte  KeychainConsentModal.svelte  ModeGroup.svelte  ModeGroup.test.ts  MoveToModal.svelte  OutlineRail.svelte  PresenceStack.svelte  QuickSwitcher.svelte  ReadingView.svelte  ResizeHandle.svelte  RightSidebar.svelte  SearchModal.svelte  SettingsPanel.svelte  SignInModal.svelte  StatusBar.svelte  TabStrip.svelte  Toolbar.svelte  TranscriptLane.svelte  TranscriptView.svelte  TreeNode.svelte  UpdatePill.svelte  WorkspaceMenu.svelte  WorkspacePicker.svelte  accent.svelte.ts  accent.test.ts  accentParity.test.ts  background.svelte.ts  colorBubbles.test.ts  colorBubbles.ts  dnd.svelte.ts  docExport.test.ts  docExport.ts  editorState.svelte.ts  (+42 more)
apps/desktop/src/routes/: +layout.svelte  +page.svelte
apps/web/: index.html  package.json  tsconfig.json  vite.config.ts
apps/web/public/: site.webmanifest
apps/web/scripts/: account-e2e.mjs  auth-e2e.mjs  cli-login-e2e.mjs  collab-e2e.mjs  convergence.mjs  enterprise-e2e.mjs  filesync-e2e.mjs  folders-e2e.mjs  gdrive-e2e.mjs  gdrive-real.mjs  graph-e2e.mjs  home-api-e2e.mjs  live-preview-test.mjs  mac-ffi-e2e.mjs  mcp-e2e.mjs  md-commands-test.mjs  persistence-e2e.mjs  render-test.mjs  roomcheck.mjs  search-e2e.mjs  search-ui-e2e.mjs  settings-ui-e2e.mjs  sync-daemon-e2e.mjs  ui-byteoffset-test.mjs  ui-flows-e2e.mjs  vscode-presence-e2e.mjs  workspace-github-e2e.mjs  workspace-github-real.mjs  workspace-s3-e2e.mjs  workspace-ui-e2e.mjs
apps/web/src/: AccountMenu.svelte  App.svelte  AuthPage.svelte  CommentsPanel.svelte  ContextMenu.svelte  DocApp.svelte  Editor.svelte  ErrorPage.svelte  FolderOpenGlyph.svelte  GraphView.svelte  HistoryPanel.svelte  Home.svelte  HomeTreeNode.svelte  InfoPanel.svelte  MentionText.svelte  NotFound.svelte  NotificationsBell.svelte  OutlineRail.svelte  SearchPalette.svelte  SettingsPage.svelte  SettingsPage.test.ts  Sidebar.svelte  SidebarNavNode.svelte  SuggestionsPanel.svelte  ThemeModeControl.svelte  Toolbar.svelte  WorkspaceMenu.svelte  WorkspacePanel.svelte  accent.svelte.ts  accountApi.ts  apiError.ts  app.css  appGate.test.ts  appGate.ts  authSession.svelte.ts  background.svelte.ts  collabApi.ts  collabStore.svelte.ts  colorBubbles.test.ts  errorKind.test.ts  (+30 more)
apps/web/src/i18n/: de.ts  en.ts  es.ts  fr.ts  index.svelte.ts  it.ts  pt.ts
apps/web/src/livePreview/: index.ts  inline.ts  mermaid.test.ts  table.test.ts  transform.ts  widgets.ts
apps/web/src/settings/: AboutSection.svelte  ApiKeysSection.svelte  ColorBubbleRow.svelte  ColorBubbleRow.svelte.test.ts  ConnectionsSection.svelte  LanguageSection.svelte  MembersSection.svelte  NotificationsSection.svelte  PreferencesSection.svelte  ProfileSection.svelte  ProfileSection.test.ts  SettingRow.svelte  SettingsCard.svelte  ShortcutsSection.svelte  StorageGitForm.svelte  StorageS3Form.svelte  ThemePreviewCards.svelte  TokenMintModal.svelte  WorkspaceGeneralSection.svelte  avatarResize.ts  settingsNav.test.ts  settingsNav.ts
crates/muesli-cli/: Cargo.toml
crates/muesli-cli/src/: api.rs  lib.rs  main.rs  session.rs  store.rs  sync.rs
crates/muesli-core/: Cargo.toml
crates/muesli-core/src/: anchor.rs  events.rs  ingest.rs  lib.rs  protocol.rs
crates/muesli-server/: Cargo.toml
crates/muesli-server/migrations/: 0001_documents_and_log.sql  0002_identity_and_sharing.sql  0003_api_tokens.sql  0004_comments_suggestions.sql  0005_workspace_invites_and_storage.sql  0006_document_links.sql  0007_audit_and_workspace_sso.sql  0008_folders_and_trash.sql  0009_search_text.sql  0010_user_profile_overrides.sql  0011_starred.sql  0012_mentions.sql  0013_mentions_unique.sql  0014_notifications.sql  0015_workspace_storage_binding.sql  0016_user_onboarding.sql  0017_api_token_kind.sql  0018_user_prefs.sql
crates/muesli-server/src/: account.rs  api.rs  audit.rs  auth.rs  error_page.rs  events.rs  folders.rs  gdrive.rs  links.rs  main.rs  mcp.rs  mentions.rs  msgraph.rs  notifications.rs  notifications_api.rs  persistence.rs  prefs_api.rs  room.rs  search.rs  secrets.rs  storage.rs  workspace.rs
dev/dex/: config.example.yaml
dev/dex2/: config.example.yaml
docs/: README.md
integrations/vscode/: .vscodeignore  LICENSE  README.md  package.json  tsconfig.json
integrations/vscode/src/: core.ts  extension.ts
packaging/homebrew/: muesli.rb.tmpl
shared/: palette.css
(+69 files in other folders)
