[package]
name = "muesli-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Muesli shared document engine: yrs text CRDT, materialization, out-of-band ingest"

[dependencies]
yrs = { workspace = true }
similar = { workspace = true }
thiserror = { workspace = true }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
base64 = "0.22"
