[package]
name = "muesli-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Muesli sync server: y-sync websockets served by single-owner Doc Rooms"

[dependencies]
muesli-core = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures-util = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "migrate", "json"] }
uuid = { version = "1", features = ["serde", "v7", "v4"] }
# Identity (ADR 0012): pure OIDC relying party — discovery, PKCE, ID-token validation.
openidconnect = "4"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
axum-extra = { version = "0.10", features = ["cookie"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
rand = "0.8"
# `oid` lets rsa's Pkcs1v15Sign::new::<Sha256>() embed the RS256 DigestInfo prefix.
sha2 = { version = "0.10", features = ["oid"] }
# GitHub-compatible storage backend (Contents API ships file bodies base64-encoded).
# Already in the workspace tree via muesli-core — no new dependency weight.
base64 = "0.22"
# SharePoint connector (BYO storage phase 2): the Entra certificate path signs an RS256
# client-assertion JWT — pure-Rust RustCrypto stack (NO ring, NO jsonwebtoken, NO
# openssl; MSRV-safe). rsa re-exports pkcs1/pkcs8 for DER key parsing.
rsa = "0.9"
# x5t certificate thumbprints are SHA-1 by JOSE definition (RFC 7515 §4.1.7) — used for
# nothing security-critical beyond matching the cert Entra already holds.
sha1 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15.7"
# Email transport (sub-project ④c): provider-agnostic SMTP. The dev impl logs to console
# and is what runs in tests; the SMTP impl is the prod seam, env-configured (never tested
# against a live server here). rustls so it shares the project's TLS stack.
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "tokio1-rustls-tls", "builder", "pool"] }

[dev-dependencies]
# Test-only: construct id-token `exp`/`iat` timestamps for the JWKS-refresh unit test.
chrono = "0.4"
